Fix active participants items not visible on theme2

--- a/templates/default/theme2.less
+++ b/templates/default/theme2.less
@@ -245,6 +245,7 @@ form[id^="smallpart-student-index"] {
 			color: @color_text;
 		}
 		.filter {
+			min-height: 180px;
 			.et2_checkbox_label, .et2_grid * {color:@color_text;}
 			border: 1px solid @color_border_commentBoxArea !important;
 			border-radius: 8px;
